# task-manager-mcp

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.explorer  INSTALLATION.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docker.yml  release.yml
docs/: architecture.md  configuration.md  explorer.md  task-format.md  tools.md
scripts/: check_docs_with_features.py
task_manager_mcp/: __init__.py  __main__.py  agent_instructions.py  audit.py  checklist.py  comments.py  deps.py  history.py  server.py  tasks.py
task_manager_mcp/explorer/: __init__.py  server.py
task_manager_mcp/explorer/static/: index.html
tests/: conftest.py  test_agent_instructions.py  test_audit.py  test_checklist.py  test_comments.py  test_deps.py  test_explorer.py  test_history.py  test_server.py  test_tasks.py  test_transition_side_effects.py
