[project]
name = "task-manager-mcp"
version = "0.4.2"
description = "Task management MCP for Claude Code with dependency resolution, on top of Obsidian"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "python-frontmatter>=1.1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=0.25",
    "ruff>=0.5",
    "pre-commit>=3.7",
    "httpx>=0.27",
]
explorer = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
]

[tool.setuptools.package-data]
"task_manager_mcp.explorer" = ["static/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
